# Offpunk History

## 3.1 - Unreleased
- Cut startup time in half by lazy loading optional modules
- Adding support for tmux clipboard and cleaning clipboard code (by Stephen)
- Default ON prompt color set to yellow (by Matin Mohammadi)
- "copy" now default to "url" and works coherently 
- hide pictures which are from blocked URL (and hide IMG links pointing to blocked URL)
- CRASHFIX: "list" was crashing because of a bad call to super() (reported by Toby Kurien)
- CRASHFIX: "--features" was crashing (patch by Étienne Mollier)
- BUGFIX: "info" was sometimes returning the wrong cleaning method
- BUGFIX: history latest items was sometimes overwritten with multiple back/forward
- PACKAGING: use hatch-requirements-txt (by link2xt)
- Lot of typos fixed (by Sebastian Rasmussen)
- Fixed xkcdpunk manpage (by Étienne Mollier)
- "unmerdify" manpage (by Étienne Mollier)
- TRANSLATION: added Swedish SV (by Sebastian Rasmussen)
- TRANSLATION: added Persian (Farsi) (by Mati Mohammadi)

## 3.0 - February 9th 2026
Changes since 2.8
Important changes:
- "opnk" is deprecated and replaced by "openk"
- Default image size now 100 instead of 40 (can be restored with "set images_size 40")
- Links to available feeds are now displayed at the bottom of HTML pages
- "root" has been modified to go to the root of the capsule/userspace "root /" for real root
- Images are now displayed in Gemini. This can be disabled with "set gemini_images false"
- "ls" command is deprecated
Features:
- Offpunk is now translatable (by JMCS). Translations in ES, GC (JMCS) and NL (Bert Livens)
- Add "unmerdify" tool to extract content from HTML if "ftr_site_config" is set (by Vincent Jousse)
- new "xkcdpunk" command-line tool to directly access your XKCD comics
- new "websearch" command which default to wiby.me
- new "share" command to send a page by email
- new "reply" command to send an email to the author of the page
- "cookies" command and http cookies are now supported in netcache (by Urja)